// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <Drawer /> renders 1`] = `
<DocumentFragment>
  <div
    class="drawer h-full test"
    data-testid="Drawer"
    id="Drawer"
  >
    <input
      class="drawer-toggle"
      id="Drawer-toggle"
      type="checkbox"
    />
    <div
      class="drawer-content"
    >
      children...
    </div>
    <div
      class="drawer-side h-full z-10"
    >
      <label
        class="drawer-overlay"
        for="Drawer-toggle"
      />
      <ul
        class="menu menu-vertical menu-md"
        data-testid="Menu"
      >
        <li
          class="menu-title"
          data-testid="MenuTitle"
        >
          Example Menu
        </li>
        <li
          class=""
          data-testid="MenuItem"
        >
          Example menu item
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Drawer Drawer Example 1`] = `
<div
  className="drawer h-full"
  data-testid="Drawer"
  id="DrawerExample"
>
  <input
    className="drawer-toggle"
    id="DrawerExample-toggle"
    type="checkbox"
  />
  <div
    className="drawer-content"
  >
    <label
      className="btn btn-primary drawer-button"
      data-testid="Drawer"
      htmlFor="DrawerExample-toggle"
    >
      Open drawer
    </label>
    content
  </div>
  <div
    className="drawer-side h-full z-10"
  >
    <label
      className="drawer-overlay"
      htmlFor="DrawerExample-toggle"
    />
    <ul
      className="menu p-4 w-80 h-full bg-base-200"
    >
      <li>
        <button
          type="button"
        >
          Navbar Item 1
        </button>
      </li>
      <li>
        <button
          type="button"
        >
          Navbar Item 2
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Drawer Drawer Responsive Example 1`] = `
<div
  className="drawer h-full lg:drawer-open"
  data-testid="Drawer"
  id="DrawerResponsiveExample"
>
  <input
    className="drawer-toggle"
    id="DrawerResponsiveExample-toggle"
    type="checkbox"
  />
  <div
    className="drawer-content"
  >
    <label
      className="btn btn-primary drawer-button lg:hidden"
      data-testid="Drawer"
      htmlFor="DrawerResponsiveExample-toggle"
    >
      Open drawer
    </label>
    content
  </div>
  <div
    className="drawer-side h-full z-10"
  >
    <label
      className="drawer-overlay"
      htmlFor="DrawerResponsiveExample-toggle"
    />
    <ul
      className="menu p-4 w-80 h-full bg-base-200"
    >
      <li>
        <button
          type="button"
        >
          Navbar Item 1
        </button>
      </li>
      <li>
        <button
          type="button"
        >
          Navbar Item 2
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Drawer Drawer Right Side Example 1`] = `
<div
  className="drawer h-full drawer-end"
  data-testid="Drawer"
  id="DrawerRightSideExample"
>
  <input
    className="drawer-toggle"
    id="DrawerRightSideExample-toggle"
    type="checkbox"
  />
  <div
    className="drawer-content"
  >
    <label
      className="btn btn-primary drawer-button"
      data-testid="Drawer"
      htmlFor="DrawerRightSideExample-toggle"
    >
      Open drawer
    </label>
    content
  </div>
  <div
    className="drawer-side h-full z-10"
  >
    <label
      className="drawer-overlay"
      htmlFor="DrawerRightSideExample-toggle"
    />
    <ul
      className="menu p-4 w-80 h-full bg-base-200"
    >
      <li>
        <button
          type="button"
        >
          Navbar Item 1
        </button>
      </li>
      <li>
        <button
          type="button"
        >
          Navbar Item 2
        </button>
      </li>
    </ul>
  </div>
</div>
`;
